2002-06-13  Roland McGrath  <roland@frob.com>

	* ptyio.c (pty_io_readable): int -> size_t in argument type.
	* term.h: Update decl.
	* users.c (trivfs_S_io_write): int -> size_t in AMT argument type.
	(trivfs_S_io_readable): Likewise.
	(trivfs_S_io_read): Likewise.  Also u_int -> size_t, off_t -> loff_t.
	(trivfs_S_io_write): Likewise.
	(trivfs_S_io_map): Add reply port args.

2002-05-28  Roland McGrath  <roland@frob.com>

	* devio.c (device_open_reply): int -> size_t
	(devio_set_bits, devio_mdmctl, devio_mdmstate): Likewise.

2002-05-08  Roland McGrath  <roland@frob.com>

	* main.c (main): Add a return after `error' call to clue compiler in.

2002-05-03  Roland McGrath  <roland@frob.com>

	* hurdio.c (hurdio_reader_loop): Add a return stmt.
	(hurdio_writer_loop): Likewise.

2002-03-23  James A. Morrison  <ja2morri@uwaterloo.ca>

	* main.c: Include <error.h>.
	(main): Use error, not fprintf and exit or perror and exit.  Use
	ERR, not errno.  Use MACH_PORT_NULL explicitly.
	* users.c: Include <error.h>.
	(init_users): Use ERR, not errno.  Use error, not perror and exit.

2002-03-05  Marcus Brinkmann  <marcus@gnu.org>

	* main.c (main): Use memset instead bzero.
	Fix error message, and formatting of some comments.
	* ptyio.c (pty_io_read): Use memcpy instead bcopy.

	* users.c (S_tioctl_tiocflush): Ignore error by bottom handler's
	notice_input_flushed.
	* users.c (set_state): Likewise.
	If bottom handler's set_bits fails, don't adjust terminal state
	but return success anyway.

2002-02-10  Marcus Brinkmann  <marcus@gnu.org>

	* term.h: Declare rdev.
	* main.c (options): New variable.
	(parse_opt): Handle case `n' to set rdev number.
	Also return EINVAL if terminal type is invalid.
	* users.c (trivfs_modify_stat): Set ST->st_rdev to global rdev.

2002-02-10  Marcus Brinkmann  <marcus@gnu.org>

	* hurdio.c: New file.
	* Makefile (SRCS): Add hurdio.c.
	* term.h: Add hurdio_bottom declaration.
	* main.c: Add T_HURDIO to enum of tty_type.